PDDLparser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> pddl
Rule 1     pddl -> domain
Rule 2     domain -> LPAREN DEFINE_KEY domain_def require_def types_def predicates_def action_def_lst RPAREN
Rule 3     domain_def -> LPAREN DOMAIN_KEY NAME RPAREN
Rule 4     require_def -> LPAREN REQUIREMENTS_KEY require_key_lst RPAREN
Rule 5     require_key_lst -> require_key require_key_lst
Rule 6     require_key_lst -> require_key
Rule 7     require_key -> STRIPS_KEY
Rule 8     require_key -> EQUALITY_KEY
Rule 9     require_key -> TYPING_KEY
Rule 10    require_key -> ADL_KEY
Rule 11    require_key -> ND_KEY
Rule 12    types_def -> LPAREN TYPES_KEY names_lst RPAREN
Rule 13    names_lst -> NAME names_lst
Rule 14    names_lst -> NAME
Rule 15    predicates_def -> LPAREN PREDICATES_KEY predicate_def_lst RPAREN
Rule 16    predicate_def_lst -> predicate_def predicate_def_lst
Rule 17    predicate_def_lst -> predicate_def
Rule 18    predicate_def -> LPAREN NAME typed_variables_lst RPAREN
Rule 19    predicate_def -> LPAREN NAME RPAREN
Rule 20    action_def_lst -> action_def action_def_lst
Rule 21    action_def_lst -> action_def
Rule 22    action_def -> LPAREN ACTION_KEY NAME parameters_def precond_def effects_def RPAREN
Rule 23    parameters_def -> PARAMETERS_KEY LPAREN typed_variables_lst RPAREN
Rule 24    parameters_def -> PARAMETERS_KEY LPAREN RPAREN
Rule 25    precond_def -> PRECONDITION_KEY LPAREN formula RPAREN
Rule 26    formula -> literal
Rule 27    formula -> AND_KEY formula_lst
Rule 28    formula -> OR_KEY formula_lst
Rule 29    formula -> NOT_KEY formula
Rule 30    formula -> IMPLY_KEY formula formula
Rule 31    formula -> EXISTS_KEY LPAREN typed_variables_lst RPAREN formula
Rule 32    formula -> FORALL_KEY LPAREN typed_variables_lst RPAREN formula
Rule 33    formula -> LPAREN AND_KEY formula_lst RPAREN
Rule 34    formula -> LPAREN OR_KEY formula_lst RPAREN
Rule 35    formula -> LPAREN NOT_KEY formula RPAREN
Rule 36    formula -> LPAREN IMPLY_KEY formula formula RPAREN
Rule 37    formula -> LPAREN literal RPAREN
Rule 38    formula -> LPAREN EXISTS_KEY LPAREN typed_variables_lst RPAREN formula RPAREN
Rule 39    formula -> LPAREN FORALL_KEY LPAREN typed_variables_lst RPAREN formula RPAREN
Rule 40    formula_lst -> formula formula_lst
Rule 41    formula_lst -> formula
Rule 42    effects_def -> EFFECT_KEY LPAREN eff_formula RPAREN
Rule 43    eff_formula -> one_eff_formula
Rule 44    eff_formula -> AND_KEY one_eff_formula_lst
Rule 45    eff_formula -> ONEOF_KEY one_eff_formula_lst
Rule 46    one_eff_formula -> literal
Rule 47    one_eff_formula -> AND_KEY literal_lst
Rule 48    one_eff_formula -> LPAREN WHEN_KEY formula one_eff_formula RPAREN
Rule 49    one_eff_formula -> LPAREN FORALL_KEY LPAREN typed_variables_lst RPAREN one_eff_formula RPAREN
Rule 50    one_eff_formula -> LPAREN FORALL_KEY LPAREN typed_variables_lst RPAREN LPAREN WHEN_KEY formula one_eff_formula RPAREN RPAREN
Rule 51    one_eff_formula_lst -> one_eff_formula one_eff_formula_lst
Rule 52    one_eff_formula_lst -> one_eff_formula
Rule 53    literal_lst -> literal literal_lst
Rule 54    literal_lst -> literal
Rule 55    literal -> LPAREN NOT_KEY predicate RPAREN
Rule 56    literal -> predicate
Rule 57    predicate -> LPAREN NAME variables_lst RPAREN
Rule 58    predicate -> LPAREN EQUALS VARIABLE VARIABLE RPAREN
Rule 59    predicate -> LPAREN NAME RPAREN
Rule 60    predicate -> NAME variables_lst
Rule 61    predicate -> EQUALS VARIABLE VARIABLE
Rule 62    predicate -> NAME
Rule 63    typed_variables_lst -> variables_lst HYPHEN type typed_variables_lst
Rule 64    typed_variables_lst -> variables_lst HYPHEN type
Rule 65    variables_lst -> VARIABLE variables_lst
Rule 66    variables_lst -> VARIABLE
Rule 67    type -> NAME

Terminals, with rules where they appear

ACTION_KEY           : 22
ADL_KEY              : 10
AND_KEY              : 27 33 44 47
DEFINE_KEY           : 2
DOMAIN_KEY           : 3
EFFECT_KEY           : 42
EQUALITY_KEY         : 8
EQUALS               : 58 61
EXISTS_KEY           : 31 38
FORALL_KEY           : 32 39 49 50
HYPHEN               : 63 64
IMPLY_KEY            : 30 36
LPAREN               : 2 3 4 12 15 18 19 22 23 24 25 31 32 33 34 35 36 37 38 38 39 39 42 48 49 49 50 50 50 55 57 58 59
NAME                 : 3 13 14 18 19 22 57 59 60 62 67
ND_KEY               : 11
NOT_KEY              : 29 35 55
ONEOF_KEY            : 45
OR_KEY               : 28 34
PARAMETERS_KEY       : 23 24
PRECONDITION_KEY     : 25
PREDICATES_KEY       : 15
REQUIREMENTS_KEY     : 4
RPAREN               : 2 3 4 12 15 18 19 22 23 24 25 31 32 33 34 35 36 37 38 38 39 39 42 48 49 49 50 50 50 55 57 58 59
STRIPS_KEY           : 7
TYPES_KEY            : 12
TYPING_KEY           : 9
VARIABLE             : 58 58 61 61 65 66
WHEN_KEY             : 48 50
error                : 

Nonterminals, with rules where they appear

action_def           : 20 21
action_def_lst       : 2 20
domain               : 1
domain_def           : 2
eff_formula          : 42
effects_def          : 22
formula              : 25 29 30 30 31 32 35 36 36 38 39 40 41 48 50
formula_lst          : 27 28 33 34 40
literal              : 26 37 46 53 54
literal_lst          : 47 53
names_lst            : 12 13
one_eff_formula      : 43 48 49 50 51 52
one_eff_formula_lst  : 44 45 51
parameters_def       : 22
pddl                 : 0
precond_def          : 22
predicate            : 55 56
predicate_def        : 16 17
predicate_def_lst    : 15 16
predicates_def       : 2
require_def          : 2
require_key          : 5 6
require_key_lst      : 4 5
type                 : 63 64
typed_variables_lst  : 18 23 31 32 38 39 49 50 63
types_def            : 2
variables_lst        : 57 60 63 64 65

Parsing method: LALR

state 0

    (0) S' -> . pddl
    (1) pddl -> . domain
    (2) domain -> . LPAREN DEFINE_KEY domain_def require_def types_def predicates_def action_def_lst RPAREN

    LPAREN          shift and go to state 3

    pddl                           shift and go to state 1
    domain                         shift and go to state 2

state 1

    (0) S' -> pddl .



state 2

    (1) pddl -> domain .

    $end            reduce using rule 1 (pddl -> domain .)


state 3

    (2) domain -> LPAREN . DEFINE_KEY domain_def require_def types_def predicates_def action_def_lst RPAREN

    DEFINE_KEY      shift and go to state 4


state 4

    (2) domain -> LPAREN DEFINE_KEY . domain_def require_def types_def predicates_def action_def_lst RPAREN
    (3) domain_def -> . LPAREN DOMAIN_KEY NAME RPAREN

    LPAREN          shift and go to state 5

    domain_def                     shift and go to state 6

state 5

    (3) domain_def -> LPAREN . DOMAIN_KEY NAME RPAREN

    DOMAIN_KEY      shift and go to state 7


state 6

    (2) domain -> LPAREN DEFINE_KEY domain_def . require_def types_def predicates_def action_def_lst RPAREN
    (4) require_def -> . LPAREN REQUIREMENTS_KEY require_key_lst RPAREN

    LPAREN          shift and go to state 8

    require_def                    shift and go to state 9

state 7

    (3) domain_def -> LPAREN DOMAIN_KEY . NAME RPAREN

    NAME            shift and go to state 10


state 8

    (4) require_def -> LPAREN . REQUIREMENTS_KEY require_key_lst RPAREN

    REQUIREMENTS_KEY shift and go to state 11


state 9

    (2) domain -> LPAREN DEFINE_KEY domain_def require_def . types_def predicates_def action_def_lst RPAREN
    (12) types_def -> . LPAREN TYPES_KEY names_lst RPAREN

    LPAREN          shift and go to state 12

    types_def                      shift and go to state 13

state 10

    (3) domain_def -> LPAREN DOMAIN_KEY NAME . RPAREN

    RPAREN          shift and go to state 14


state 11

    (4) require_def -> LPAREN REQUIREMENTS_KEY . require_key_lst RPAREN
    (5) require_key_lst -> . require_key require_key_lst
    (6) require_key_lst -> . require_key
    (7) require_key -> . STRIPS_KEY
    (8) require_key -> . EQUALITY_KEY
    (9) require_key -> . TYPING_KEY
    (10) require_key -> . ADL_KEY
    (11) require_key -> . ND_KEY

    STRIPS_KEY      shift and go to state 17
    EQUALITY_KEY    shift and go to state 18
    TYPING_KEY      shift and go to state 19
    ADL_KEY         shift and go to state 20
    ND_KEY          shift and go to state 21

    require_key_lst                shift and go to state 15
    require_key                    shift and go to state 16

state 12

    (12) types_def -> LPAREN . TYPES_KEY names_lst RPAREN

    TYPES_KEY       shift and go to state 22


state 13

    (2) domain -> LPAREN DEFINE_KEY domain_def require_def types_def . predicates_def action_def_lst RPAREN
    (15) predicates_def -> . LPAREN PREDICATES_KEY predicate_def_lst RPAREN

    LPAREN          shift and go to state 23

    predicates_def                 shift and go to state 24

state 14

    (3) domain_def -> LPAREN DOMAIN_KEY NAME RPAREN .

    LPAREN          reduce using rule 3 (domain_def -> LPAREN DOMAIN_KEY NAME RPAREN .)


state 15

    (4) require_def -> LPAREN REQUIREMENTS_KEY require_key_lst . RPAREN

    RPAREN          shift and go to state 25


state 16

    (5) require_key_lst -> require_key . require_key_lst
    (6) require_key_lst -> require_key .
    (5) require_key_lst -> . require_key require_key_lst
    (6) require_key_lst -> . require_key
    (7) require_key -> . STRIPS_KEY
    (8) require_key -> . EQUALITY_KEY
    (9) require_key -> . TYPING_KEY
    (10) require_key -> . ADL_KEY
    (11) require_key -> . ND_KEY

    RPAREN          reduce using rule 6 (require_key_lst -> require_key .)
    STRIPS_KEY      shift and go to state 17
    EQUALITY_KEY    shift and go to state 18
    TYPING_KEY      shift and go to state 19
    ADL_KEY         shift and go to state 20
    ND_KEY          shift and go to state 21

    require_key                    shift and go to state 16
    require_key_lst                shift and go to state 26

state 17

    (7) require_key -> STRIPS_KEY .

    STRIPS_KEY      reduce using rule 7 (require_key -> STRIPS_KEY .)
    EQUALITY_KEY    reduce using rule 7 (require_key -> STRIPS_KEY .)
    TYPING_KEY      reduce using rule 7 (require_key -> STRIPS_KEY .)
    ADL_KEY         reduce using rule 7 (require_key -> STRIPS_KEY .)
    ND_KEY          reduce using rule 7 (require_key -> STRIPS_KEY .)
    RPAREN          reduce using rule 7 (require_key -> STRIPS_KEY .)


state 18

    (8) require_key -> EQUALITY_KEY .

    STRIPS_KEY      reduce using rule 8 (require_key -> EQUALITY_KEY .)
    EQUALITY_KEY    reduce using rule 8 (require_key -> EQUALITY_KEY .)
    TYPING_KEY      reduce using rule 8 (require_key -> EQUALITY_KEY .)
    ADL_KEY         reduce using rule 8 (require_key -> EQUALITY_KEY .)
    ND_KEY          reduce using rule 8 (require_key -> EQUALITY_KEY .)
    RPAREN          reduce using rule 8 (require_key -> EQUALITY_KEY .)


state 19

    (9) require_key -> TYPING_KEY .

    STRIPS_KEY      reduce using rule 9 (require_key -> TYPING_KEY .)
    EQUALITY_KEY    reduce using rule 9 (require_key -> TYPING_KEY .)
    TYPING_KEY      reduce using rule 9 (require_key -> TYPING_KEY .)
    ADL_KEY         reduce using rule 9 (require_key -> TYPING_KEY .)
    ND_KEY          reduce using rule 9 (require_key -> TYPING_KEY .)
    RPAREN          reduce using rule 9 (require_key -> TYPING_KEY .)


state 20

    (10) require_key -> ADL_KEY .

    STRIPS_KEY      reduce using rule 10 (require_key -> ADL_KEY .)
    EQUALITY_KEY    reduce using rule 10 (require_key -> ADL_KEY .)
    TYPING_KEY      reduce using rule 10 (require_key -> ADL_KEY .)
    ADL_KEY         reduce using rule 10 (require_key -> ADL_KEY .)
    ND_KEY          reduce using rule 10 (require_key -> ADL_KEY .)
    RPAREN          reduce using rule 10 (require_key -> ADL_KEY .)


state 21

    (11) require_key -> ND_KEY .

    STRIPS_KEY      reduce using rule 11 (require_key -> ND_KEY .)
    EQUALITY_KEY    reduce using rule 11 (require_key -> ND_KEY .)
    TYPING_KEY      reduce using rule 11 (require_key -> ND_KEY .)
    ADL_KEY         reduce using rule 11 (require_key -> ND_KEY .)
    ND_KEY          reduce using rule 11 (require_key -> ND_KEY .)
    RPAREN          reduce using rule 11 (require_key -> ND_KEY .)


state 22

    (12) types_def -> LPAREN TYPES_KEY . names_lst RPAREN
    (13) names_lst -> . NAME names_lst
    (14) names_lst -> . NAME

    NAME            shift and go to state 28

    names_lst                      shift and go to state 27

state 23

    (15) predicates_def -> LPAREN . PREDICATES_KEY predicate_def_lst RPAREN

    PREDICATES_KEY  shift and go to state 29


state 24

    (2) domain -> LPAREN DEFINE_KEY domain_def require_def types_def predicates_def . action_def_lst RPAREN
    (20) action_def_lst -> . action_def action_def_lst
    (21) action_def_lst -> . action_def
    (22) action_def -> . LPAREN ACTION_KEY NAME parameters_def precond_def effects_def RPAREN

    LPAREN          shift and go to state 30

    action_def_lst                 shift and go to state 31
    action_def                     shift and go to state 32

state 25

    (4) require_def -> LPAREN REQUIREMENTS_KEY require_key_lst RPAREN .

    LPAREN          reduce using rule 4 (require_def -> LPAREN REQUIREMENTS_KEY require_key_lst RPAREN .)


state 26

    (5) require_key_lst -> require_key require_key_lst .

    RPAREN          reduce using rule 5 (require_key_lst -> require_key require_key_lst .)


state 27

    (12) types_def -> LPAREN TYPES_KEY names_lst . RPAREN

    RPAREN          shift and go to state 33


state 28

    (13) names_lst -> NAME . names_lst
    (14) names_lst -> NAME .
    (13) names_lst -> . NAME names_lst
    (14) names_lst -> . NAME

    RPAREN          reduce using rule 14 (names_lst -> NAME .)
    NAME            shift and go to state 28

    names_lst                      shift and go to state 34

state 29

    (15) predicates_def -> LPAREN PREDICATES_KEY . predicate_def_lst RPAREN
    (16) predicate_def_lst -> . predicate_def predicate_def_lst
    (17) predicate_def_lst -> . predicate_def
    (18) predicate_def -> . LPAREN NAME typed_variables_lst RPAREN
    (19) predicate_def -> . LPAREN NAME RPAREN

    LPAREN          shift and go to state 35

    predicate_def_lst              shift and go to state 36
    predicate_def                  shift and go to state 37

state 30

    (22) action_def -> LPAREN . ACTION_KEY NAME parameters_def precond_def effects_def RPAREN

    ACTION_KEY      shift and go to state 38


state 31

    (2) domain -> LPAREN DEFINE_KEY domain_def require_def types_def predicates_def action_def_lst . RPAREN

    RPAREN          shift and go to state 39


state 32

    (20) action_def_lst -> action_def . action_def_lst
    (21) action_def_lst -> action_def .
    (20) action_def_lst -> . action_def action_def_lst
    (21) action_def_lst -> . action_def
    (22) action_def -> . LPAREN ACTION_KEY NAME parameters_def precond_def effects_def RPAREN

    RPAREN          reduce using rule 21 (action_def_lst -> action_def .)
    LPAREN          shift and go to state 30

    action_def                     shift and go to state 32
    action_def_lst                 shift and go to state 40

state 33

    (12) types_def -> LPAREN TYPES_KEY names_lst RPAREN .

    LPAREN          reduce using rule 12 (types_def -> LPAREN TYPES_KEY names_lst RPAREN .)


state 34

    (13) names_lst -> NAME names_lst .

    RPAREN          reduce using rule 13 (names_lst -> NAME names_lst .)


state 35

    (18) predicate_def -> LPAREN . NAME typed_variables_lst RPAREN
    (19) predicate_def -> LPAREN . NAME RPAREN

    NAME            shift and go to state 41


state 36

    (15) predicates_def -> LPAREN PREDICATES_KEY predicate_def_lst . RPAREN

    RPAREN          shift and go to state 42


state 37

    (16) predicate_def_lst -> predicate_def . predicate_def_lst
    (17) predicate_def_lst -> predicate_def .
    (16) predicate_def_lst -> . predicate_def predicate_def_lst
    (17) predicate_def_lst -> . predicate_def
    (18) predicate_def -> . LPAREN NAME typed_variables_lst RPAREN
    (19) predicate_def -> . LPAREN NAME RPAREN

    RPAREN          reduce using rule 17 (predicate_def_lst -> predicate_def .)
    LPAREN          shift and go to state 35

    predicate_def                  shift and go to state 37
    predicate_def_lst              shift and go to state 43

state 38

    (22) action_def -> LPAREN ACTION_KEY . NAME parameters_def precond_def effects_def RPAREN

    NAME            shift and go to state 44


state 39

    (2) domain -> LPAREN DEFINE_KEY domain_def require_def types_def predicates_def action_def_lst RPAREN .

    $end            reduce using rule 2 (domain -> LPAREN DEFINE_KEY domain_def require_def types_def predicates_def action_def_lst RPAREN .)


state 40

    (20) action_def_lst -> action_def action_def_lst .

    RPAREN          reduce using rule 20 (action_def_lst -> action_def action_def_lst .)


state 41

    (18) predicate_def -> LPAREN NAME . typed_variables_lst RPAREN
    (19) predicate_def -> LPAREN NAME . RPAREN
    (63) typed_variables_lst -> . variables_lst HYPHEN type typed_variables_lst
    (64) typed_variables_lst -> . variables_lst HYPHEN type
    (65) variables_lst -> . VARIABLE variables_lst
    (66) variables_lst -> . VARIABLE

    RPAREN          shift and go to state 46
    VARIABLE        shift and go to state 48

    typed_variables_lst            shift and go to state 45
    variables_lst                  shift and go to state 47

state 42

    (15) predicates_def -> LPAREN PREDICATES_KEY predicate_def_lst RPAREN .

    LPAREN          reduce using rule 15 (predicates_def -> LPAREN PREDICATES_KEY predicate_def_lst RPAREN .)


state 43

    (16) predicate_def_lst -> predicate_def predicate_def_lst .

    RPAREN          reduce using rule 16 (predicate_def_lst -> predicate_def predicate_def_lst .)


state 44

    (22) action_def -> LPAREN ACTION_KEY NAME . parameters_def precond_def effects_def RPAREN
    (23) parameters_def -> . PARAMETERS_KEY LPAREN typed_variables_lst RPAREN
    (24) parameters_def -> . PARAMETERS_KEY LPAREN RPAREN

    PARAMETERS_KEY  shift and go to state 50

    parameters_def                 shift and go to state 49

state 45

    (18) predicate_def -> LPAREN NAME typed_variables_lst . RPAREN

    RPAREN          shift and go to state 51


state 46

    (19) predicate_def -> LPAREN NAME RPAREN .

    LPAREN          reduce using rule 19 (predicate_def -> LPAREN NAME RPAREN .)
    RPAREN          reduce using rule 19 (predicate_def -> LPAREN NAME RPAREN .)


state 47

    (63) typed_variables_lst -> variables_lst . HYPHEN type typed_variables_lst
    (64) typed_variables_lst -> variables_lst . HYPHEN type

    HYPHEN          shift and go to state 52


state 48

    (65) variables_lst -> VARIABLE . variables_lst
    (66) variables_lst -> VARIABLE .
    (65) variables_lst -> . VARIABLE variables_lst
    (66) variables_lst -> . VARIABLE
